8248710: jextract should not generate Cstring, Cpointer, Cint C-X utility classes
Reviewed-by: mcimadamore